# ChatApp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: DatabaseManager.cpp  DatabaseManager.h  MessageHandler.cpp  MessageHandler.h  NetworkManager.cpp  NetworkManager.h  UserManager.cpp  UserManager.h
src/models/: Message.cpp  Message.h  User.cpp  User.h
src/resources/: resources.qrc
src/resources/qss/: ChatWindow.qss  DeleteWindow.qss  InputWindow.qss  LoginWindow.qss  MainWindow.qss  dark.qss  style.qss
src/ui/: ChatWindow.cpp  ChatWindow.h  ChatWindow.ui  ContactListWidget.cpp  ContactListWidget.h  DeleteWindow.cpp  DeleteWindow.h  DragImageTextEdit.h  EmojiDialog.cpp  EmojiDialog.h  ForgotPasswordWindow.cpp  ForgotPasswordWindow.h  InputWindow.cpp  InputWindow.h  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessageBubble.cpp  MessageBubble.h  RegisterWindow.cpp  RegisterWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/utils/: Config.cpp  Config.h  Logger.cpp  Logger.h
